--- a/demo/package.json
+++ b/demo/package.json
@@ -16,7 +16,7 @@
     "webpack": "webpack"
   },
   "optionalDependencies": {
-    "hci-ng-grid": "1.0.0-alpha.10"
+    "hci-ng-grid": "^1.0.0-alpha.11"
   },
   "dependencies": {
     "@angular/common": "^4.0.0",
@@ -30,7 +30,7 @@
     "@angular/router": "^4.0.0",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.5",
     "angular-2-local-storage": "1.0.1",
-    "bootstrap": "4.0.0-beta",
+    "bootstrap": "4.0.0-beta.2",
     "font-awesome": "^4.6.3",
     "moment": "2.15.1",
     "reflect-metadata": "^0.1.10",
@@ -63,7 +63,7 @@
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "minimist": "^1.2.0",
-    "node-sass": "4.5.1",
+    "node-sass": "4.7.2",
     "postcss-loader": "1.3.3",
     "raw-loader": "^0.5.1",
     "resolve-url-loader": "2.0.2",
