--- a/demo/package.json
+++ b/demo/package.json
@@ -16,7 +16,7 @@
     "webpack": "webpack"
   },
   "optionalDependencies": {
-    "hci-ng-grid": "^1.0.0-alpha.11"
+    "hci-ng-grid": "^1.0.0-alpha.12"
   },
   "dependencies": {
     "@angular/common": "^4.0.0",
@@ -33,6 +33,7 @@
     "bootstrap": "^4.0.0",
     "font-awesome": "^4.6.3",
     "moment": "2.15.1",
+    "moment-random": "^1.0.3",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.4.3",
     "zone.js": "^0.8.5"
