--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hci-ng-grid",
-  "version": "1.0.0-alpha.11",
+  "version": "1.0.0-alpha.12",
   "description": "Comprehensive angular grid component",
   "repository": "https://ri-source.hci.utah.edu/hcidevs/hci-ng-grid.git",
   "scripts": {
@@ -43,7 +43,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "@compodoc/compodoc": "^1.0.0-beta.14",
+    "@compodoc/compodoc": "^1.0.5",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.5",
     "@types/jasmine": "^2.5.53",
     "@types/node": "^6.0.48",
