--- a/demo/package.json
+++ b/demo/package.json
@@ -28,10 +28,12 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@fortawesome/fontawesome": "^1.1.2",
+    "@fortawesome/fontawesome-free-regular": "^5.0.4",
+    "@fortawesome/fontawesome-free-solid": "^5.0.4",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.5",
     "angular-2-local-storage": "1.0.1",
     "bootstrap": "^4.0.0",
-    "font-awesome": "^4.6.3",
     "moment": "2.15.1",
     "moment-random": "^1.0.3",
     "reflect-metadata": "^0.1.10",
