--- a/package.json
+++ b/package.json
@@ -29,22 +29,21 @@
     "moment": "^2.18.1"
   },
   "peerDependencies": {
-    "@angular/common": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.5"
+    "@angular/common": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0"
   },
   "devDependencies": {
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/router": "^5.0.0",
     "@compodoc/compodoc": "^1.0.5",
-    "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.5",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0",
     "@types/jasmine": "^2.5.53",
     "@types/node": "^6.0.48",
     "@types/source-map": "^0.5.0",
