--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Comprehensive angular grid component",
   "repository": "https://ri-source.hci.utah.edu/hcidevs/hci-ng-grid.git",
   "scripts": {
-    "build": "npm run clean && npm run ngc && npm run doc && npm run karma start && npm run copyfiles package.json dist/",
+    "build": "npm run clean && npm run ngc && npm run doc && npm run karma start && npm run copyfiles package.json dist/ && npm run copyfiles -- src/grid/themes/*.css dist/",
     "clean": "npm run rimraf index.js index.d.ts index.ngsummary.json index.metadata.json index.js.map src/**/*.js src/**/*.ngfactory.ts src/**/*.d.ts src/**/*.js.map src/**/*.ngsummary.json src/**/*.metadata.json code-coverage dist",
     "compodoc": "compodoc",
     "copyfiles": "copyfiles",
@@ -12,7 +12,7 @@
     "karma": "karma",
     "ngc": "ngc",
     "npmPub": "npm run build && npm run copyfiles -- package.json dist/ && cd dist && npm publish",
-    "push": "cd dist && npm run copyfiles -- \"index.+(js|d.ts|js.map|metadata.json)\" ../demo/node_modules/hci-ng-grid && npm run copyfiles -- -e \"*.+(ngfactory|ngsummary).*\" \"src/**/*.+(js|d.ts|js.map|metadata.json|.css)\" ../demo/node_modules/hci-ng-grid && cd ..",
+    "push": "cd dist && npm run copyfiles -- \"index.+(js|d.ts|js.map|metadata.json)\" ../demo/node_modules/hci-ng-grid && npm run copyfiles -- -e \"*.+(ngfactory|ngsummary).*\" \"src/**/*.+(js|d.ts|js.map|metadata.json|css)\" ../demo/node_modules/hci-ng-grid && cd ..",
     "rimraf": "rimraf"
   },
   "main": "index.js",
@@ -23,7 +23,7 @@
   },
   "files": [
     "index.+(js|d.ts|js.map|metadata.json)",
-    "src/**/!(*spec).+(js|d.ts|js.map|metadata.json)"
+    "src/**/!(*spec).+(js|d.ts|js.map|metadata.json|.css)"
   ],
   "dependencies": {
     "moment": "^2.18.1"
