--- a/package.json
+++ b/package.json
@@ -34,26 +34,26 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0"
   },
   "devDependencies": {
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
-    "@compodoc/compodoc": "^1.0.5",
+    "@angular/animations": "^5.2.0",
+    "@angular/common": "^5.2.0",
+    "@angular/compiler": "^5.2.0",
+    "@angular/compiler-cli": "^5.2.0",
+    "@angular/core": "^5.2.0",
+    "@angular/forms": "^5.2.0",
+    "@angular/platform-browser": "^5.2.0",
+    "@angular/platform-browser-dynamic": "^5.2.0",
+    "@angular/router": "^5.2.0",
+    "@compodoc/compodoc": "^1.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0",
     "@types/jasmine": "^2.5.53",
-    "@types/node": "^6.0.48",
-    "@types/source-map": "^0.5.0",
-    "@types/webpack": "^3.0.9",
-    "angular-2-local-storage": "1.0.1",
+    "@types/node": "^8.0.0",
+    "@types/webpack": "3.8.4",
+    "angular2-cool-storage": "3.1.5",
     "awesome-typescript-loader": "^3.2.3",
     "angular2-template-loader": "^0.6.2",
     "copyfiles": "^1.2.0",
     "core-js": "^2.4.1",
+    "css-loader": "^0.26.0",
     "del": "^2.2.1",
     "fs": "^0.0.2",
     "immutable": "^3.8.1",
@@ -71,15 +71,16 @@
     "minimist": "^1.2.0",
     "reflect-metadata": "^0.1.3",
     "rimraf": "^2.6.1",
-    "rxjs": "^5.4.3",
+    "rxjs": "^5.5.5",
     "source-map-loader": "^0.2.1",
+    "to-string-loader": "^1.1.5",
     "tslint": "^4.5.1",
     "typescript": "^2.5.1",
-    "webpack": "^3.3.0",
+    "webpack": "^3.8.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.7.1",
     "webpack-dll-bundles-plugin": "^1.0.0-beta.5",
     "webpack-merge": "^4.1.0",
-    "zone.js": "^0.8.5"
+    "zone.js": "^0.8.12"
   }
 }
