--- a/demo/package.json
+++ b/demo/package.json
@@ -16,22 +16,21 @@
     "webpack": "webpack"
   },
   "optionalDependencies": {
-    "hci-ng-grid": "^1.0.0-alpha.27"
+    "hci-ng-grid": "^1.0.0-beta.0"
   },
   "dependencies": {
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/router": "^5.0.0",
+    "@angular/common": "^5.2.0",
+    "@angular/compiler": "^5.2.0",
+    "@angular/compiler-cli": "^5.2.0",
+    "@angular/core": "^5.2.0",
+    "@angular/forms": "^5.2.0",
+    "@angular/http": "^5.2.0",
+    "@angular/platform-browser": "^5.2.0",
+    "@angular/router": "^5.2.0",
     "@fortawesome/fontawesome": "^1.1.2",
     "@fortawesome/fontawesome-free-regular": "^5.0.4",
     "@fortawesome/fontawesome-free-solid": "^5.0.4",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0",
-    "angular-2-local-storage": "1.0.1",
     "bootstrap": "^4.0.0",
     "moment": "2.15.1",
     "moment-random": "^1.0.3",
