--- a/demo/package.json
+++ b/demo/package.json
@@ -19,14 +19,14 @@
     "hci-ng-grid": "^1.1.0"
   },
   "dependencies": {
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/core": "^5.2.0",
-    "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
-    "@angular/platform-browser": "^5.2.0",
-    "@angular/router": "^5.2.0",
+    "@angular/common": ">5.2.0 <= 5.2.10",
+    "@angular/compiler": ">5.2.0 <= 5.2.10",
+    "@angular/compiler-cli": ">5.2.0 <= 5.2.10",
+    "@angular/core": ">5.2.0 <= 5.2.10",
+    "@angular/forms": ">5.2.0 <= 5.2.10",
+    "@angular/http": ">5.2.0 <= 5.2.10",
+    "@angular/platform-browser": ">5.2.0 <= 5.2.10",
+    "@angular/router": ">5.2.0 <= 5.2.10",
     "@fortawesome/fontawesome": "^1.1.2",
     "@fortawesome/fontawesome-free-regular": "^5.0.4",
     "@fortawesome/fontawesome-free-solid": "^5.0.4",
