--- a/demo/package.json
+++ b/demo/package.json
@@ -30,7 +30,7 @@
     "@fortawesome/fontawesome": "^1.1.2",
     "@fortawesome/fontawesome-free-regular": "^5.0.4",
     "@fortawesome/fontawesome-free-solid": "^5.0.4",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0",
+    "@ng-bootstrap/ng-bootstrap": "1.0.4",
     "bootstrap": "^4.0.0",
     "moment": "2.15.1",
     "moment-random": "^1.0.3",
