--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@compodoc/compodoc": "^1.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0",
+    "@ng-bootstrap/ng-bootstrap": "1.0.4",
     "@types/jasmine": "^2.5.53",
     "@types/node": "^8.0.0",
     "@types/webpack": "4.1.2",
