--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hci-ng-grid",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Comprehensive angular grid component",
   "repository": "https://ri-source.hci.utah.edu/hcidevs/hci-ng-grid.git",
   "scripts": {
@@ -29,8 +29,8 @@
     "moment": "^2.18.1"
   },
   "peerDependencies": {
-    "@angular/common": "^5.0.0",
-    "@angular/core": "^5.0.0",
+    "@angular/common": "^5.2.0",
+    "@angular/core": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0"
   },
   "devDependencies": {
@@ -44,7 +44,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@compodoc/compodoc": "^1.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0",
+    "@ng-bootstrap/ng-bootstrap": "1.0.4",
     "@types/jasmine": "^2.5.53",
     "@types/node": "^8.0.0",
     "@types/webpack": "4.1.2",
@@ -76,7 +76,7 @@
     "to-string-loader": "^1.1.5",
     "tslint": "^4.5.1",
     "typescript": "^2.5.1",
-    "webpack": "^3.8.0",
+    "webpack": "^3.11.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.7.1",
     "webpack-dll-bundles-plugin": "^1.0.0-beta.5",
