--- a/demo/package.json
+++ b/demo/package.json
@@ -16,7 +16,7 @@
     "webpack": "webpack"
   },
   "optionalDependencies": {
-    "hci-ng-grid": ">=2.0.0-beta.17"
+    "hci-ng-grid": ">=2.0.0-beta.18"
   },
   "dependencies": {
     "@angular/common": "5.2.x",
@@ -69,6 +69,7 @@
     "resolve-url-loader": "2.0.2",
     "rimraf": "^2.6.1",
     "sass-loader": "6.0.3",
+    "semver": "5.6.x",
     "style-loader": "^0.16.0",
     "ts-helpers": "^1.1.2",
     "ts-loader": "^2.0.3",
