--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hci-ng-grid",
-  "version": "2.0.0-beta.17",
+  "version": "2.0.0-beta.18",
   "description": "Comprehensive angular grid component",
   "repository": "https://ri-source.hci.utah.edu/hcidevs/hci-ng-grid.git",
   "scripts": {
@@ -73,6 +73,7 @@
     "reflect-metadata": "^0.1.3",
     "rimraf": "^2.6.1",
     "rxjs": "^5.5.5",
+    "semver": "5.6.x",
     "source-map-loader": "^0.2.1",
     "to-string-loader": "^1.1.5",
     "tslint": "^4.5.1",
