--- a/demo/package.json
+++ b/demo/package.json
@@ -16,7 +16,7 @@
     "webpack": "webpack"
   },
   "optionalDependencies": {
-    "hci-ng-grid": ">=2.0.0-beta.23"
+    "hci-ng-grid": ">=2.0.0-beta.24"
   },
   "dependencies": {
     "@angular/common": "5.2.x",
@@ -33,6 +33,7 @@
     "bootstrap": "4.1.x",
     "moment": "2.15.1",
     "moment-random": "^1.0.3",
+    "prismjs": "1.15.x",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.5.5",
     "zone.js": "^0.8.5"
