--- a/demo/package.json
+++ b/demo/package.json
@@ -31,7 +31,7 @@
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@ng-bootstrap/ng-bootstrap": "1.1.x",
     "bootstrap": "^4.1.0",
-    "moment": "^2.15.0",
+    "moment": ">=2.19.3",
     "moment-random": "1.0.x",
     "prismjs": "1.15.x",
     "reflect-metadata": "^0.1.10",
