--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hci-ng-grid",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "description": "Comprehensive angular grid component",
   "keywords": [
     "angular",
@@ -33,7 +33,7 @@
   ],
   "dependencies": {
     "@ng-bootstrap/ng-bootstrap": "1.1.x",
-    "moment": "^2.15.0"
+    "moment": ">=2.19.3"
   },
   "devDependencies": {
     "@angular/animations": "^5.0.0",
@@ -54,8 +54,11 @@
     "angular2-template-loader": "^0.6.2",
     "copyfiles": "^1.2.0",
     "core-js": "^2.4.1",
+    "cryptiles": ">=4.1.2",
     "css-loader": "^0.26.0",
     "del": "^2.2.1",
+    "deep-extend": ">=0.5.1",
+    "event-stream": "3.3.4",
     "fs": "^0.0.2",
     "immutable": "^3.8.1",
     "inline-source-map": "^0.6.2",
@@ -69,6 +72,7 @@
     "karma-remap-coverage": "^0.1.4",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.3",
+    "macaddress": ">=0.2.9",
     "minimist": "^1.2.0",
     "reflect-metadata": "^0.1.3",
     "rimraf": "^2.6.1",
@@ -78,6 +82,7 @@
     "to-string-loader": "^1.1.5",
     "tslint": "^4.5.1",
     "typescript": "^2.5.1",
+    "url-parse": ">=1.4.3",
     "webpack": "^3.11.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.7.1",
