--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "license": "MIT",
   "repository": "git+https://github.com/HuntsmanCancerInstitute-RISR/hci-ng-grid.git",
-  "homepage": "https://huntsmancancerinstitute-risr.github.io",
+  "homepage": "https://huntsmancancerinstitute-risr.github.io/hci-ng-grid-demo",
   "scripts": {
     "build": "npm run clean && npm run ngc && npm run doc && npm run karma start && npm run copyfiles package.json dist/ && npm run copyfiles -- src/grid/themes/*.css dist/",
     "clean": "npm run rimraf index.js index.d.ts index.ngsummary.json index.metadata.json index.js.map src/**/*.js src/**/*.ngfactory.ts src/**/*.d.ts src/**/*.js.map src/**/*.ngsummary.json src/**/*.metadata.json code-coverage dist",
