--- a/demo/package.json
+++ b/demo/package.json
@@ -16,7 +16,7 @@
     "webpack": "webpack"
   },
   "optionalDependencies": {
-    "hci-ng-grid": "3.0.x"
+    "hci-ng-grid": "3.1.0-beta.0"
   },
   "dependencies": {
     "@angular/common": "^5.2.0",
@@ -30,7 +30,7 @@
     "@fortawesome/fontawesome-free-regular": "^5.0.13",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@ng-bootstrap/ng-bootstrap": "1.1.x",
-    "bootstrap": "^4.1.0",
+    "bootstrap": "^4.1.2",
     "moment": ">=2.19.3",
     "moment-random": "1.0.x",
     "prismjs": "1.15.x",
