--- a/demo/package.json
+++ b/demo/package.json
@@ -16,7 +16,7 @@
     "webpack": "webpack"
   },
   "optionalDependencies": {
-    "hci-ng-grid": "3.1.0-beta.3"
+    "hci-ng-grid": "3.1.0"
   },
   "dependencies": {
     "@angular/common": "^5.2.0",
