--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -8,6 +8,7 @@
     ],
     "moduleResolution": "node",
     "sourceMap": true,
+    "allowJs": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
@@ -22,6 +23,8 @@
     "dist",
     "src/**/*.spec.ts",
     "src/**/*.e2e.ts",
-    "**/*.ngfactory.ts"
+    "**/*.ngfactory.ts",
+    "server.js",
+    "webpack"
   ]
 }
