--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hci-ng-grid",
-  "version": "4.0.0-beta.1",
+  "version": "4.0.0-beta.2",
   "description": "Comprehensive angular grid component",
   "keywords": [
     "angular",
@@ -36,18 +36,19 @@
   ],
   "dependencies": {
     "@ng-bootstrap/ng-bootstrap": "1.1.x",
+    "bootstrap": ">=4.3.1 <4.4.0",
     "moment": ">=2.19.3"
   },
   "devDependencies": {
-    "@angular/animations": "^5.0.0",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
+    "@angular/animations": ">=5.0.0 <7.0.0",
+    "@angular/common": ">=5.0.0 <7.0.0",
+    "@angular/compiler": ">=5.0.0 <7.0.0",
+    "@angular/compiler-cli": ">=5.0.0 <7.0.0",
+    "@angular/core": ">=5.0.0 <7.0.0",
+    "@angular/forms": ">=5.0.0 <7.0.0",
+    "@angular/platform-browser": ">=5.0.0 <7.0.0",
+    "@angular/platform-browser-dynamic": ">=5.0.0 <7.0.0",
+    "@angular/router": ">=5.0.0 <7.0.0",
     "@compodoc/compodoc": "1.0.x",
     "@types/jasmine": "^2.5.53",
     "@types/node": "^8.0.0",
@@ -62,6 +63,7 @@
     "del": "^2.2.1",
     "deep-extend": ">=0.5.1",
     "event-stream": "3.3.4",
+    "extend": ">=3.0.2",
     "fs": "^0.0.2",
     "immutable": "^3.8.1",
     "inline-source-map": "^0.6.2",
@@ -75,22 +77,23 @@
     "karma-remap-coverage": "^0.1.4",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.3",
+    "lodash": ">=4.17.11",
     "macaddress": ">=0.2.9",
     "minimist": "^1.2.0",
     "reflect-metadata": "^0.1.3",
     "rimraf": "^2.6.1",
-    "rxjs": "^5.5.5",
+    "rxjs": "5.5.x",
     "semver": "5.6.x",
     "source-map-loader": "^0.2.1",
+    "tar": ">=4.4.2",
     "to-string-loader": "^1.1.5",
     "tslint": "^4.5.1",
-    "typescript": "^2.5.1",
+    "typescript": "2.5.x",
     "url-parse": ">=1.4.3",
-    "webpack": "^3.11.0",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-dev-server": "^2.7.1",
-    "webpack-dll-bundles-plugin": "^1.0.0-beta.5",
-    "webpack-merge": "^4.1.0",
+    "webpack": "3.11.x",
+    "webpack-dev-middleware": "1.12.x",
+    "webpack-dev-server": "2.7.x",
+    "webpack-merge": "4.1.x",
     "zone.js": "^0.8.12"
   }
 }
