--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hci-ng-grid",
-  "version": "4.0.0-beta.7",
+  "version": "4.0.0",
   "description": "Comprehensive angular grid component",
   "keywords": [
     "angular",
