--- a/demo/package.json
+++ b/demo/package.json
@@ -15,27 +15,27 @@
     "webpack": "webpack"
   },
   "optionalDependencies": {
-    "hci-ng-grid": "4.0.x"
+    "hci-ng-grid": "5.0.x"
   },
   "dependencies": {
-    "@angular/common": ">=5.0.0 <7.0.0",
-    "@angular/compiler": ">=5.0.0 <7.0.0",
-    "@angular/compiler-cli": ">=5.0.0 <7.0.0",
-    "@angular/core": ">=5.0.0 <7.0.0",
-    "@angular/forms": ">=5.0.0 <7.0.0",
-    "@angular/platform-browser": ">=5.0.0 <7.0.0",
-    "@angular/router": ">=5.0.0 <7.0.0",
+    "@angular/common": ">=8.0.0 <10.0.0",
+    "@angular/compiler": ">=8.0.0 <10.0.0",
+    "@angular/compiler-cli": ">=8.0.0 <10.0.0",
+    "@angular/core": ">=8.0.0 <10.0.0",
+    "@angular/forms": ">=8.0.0 <10.0.0",
+    "@angular/platform-browser": ">=8.0.0 <10.0.0",
+    "@angular/router": ">=8.0.0 <10.0.0",
     "@fortawesome/fontawesome": "1.1.x",
     "@fortawesome/fontawesome-free-regular": "5.0.x",
     "@fortawesome/fontawesome-free-solid": "5.0.x",
-    "@ng-bootstrap/ng-bootstrap": "1.1.x",
+    "@ng-bootstrap/ng-bootstrap": "4.2.x",
     "bootstrap": ">=4.3.1 < 4.4.0",
     "moment": ">=2.19.3",
     "moment-random": "1.0.x",
     "prismjs": "1.15.x",
     "reflect-metadata": "^0.1.10",
-    "rxjs": "5.5.x",
-    "zone.js": "0.8.x"
+    "rxjs": "6.4.x",
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.42",
@@ -63,7 +63,6 @@
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "minimist": "^1.2.0",
-    "node-sass": "4.7.2",
     "postcss-loader": "1.3.3",
     "raw-loader": "^0.5.1",
     "resolve-url-loader": "2.0.2",
@@ -76,7 +75,7 @@
     "tsconfig-lint": "^0.11.0",
     "tslint": "^4.1.1",
     "tslint-loader": "^2.1.5",
-    "typescript": "2.5.x",
+    "typescript": "~3.4.2",
     "uglify-es": "^3.0.25",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "url-loader": "^0.5.8",
