--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hci-ng-grid",
-  "version": "4.0.0",
+  "version": "5.0.0-alpha.0",
   "description": "Comprehensive angular grid component",
   "keywords": [
     "angular",
@@ -40,20 +40,20 @@
     "src/**/!(*spec).+(js|d.ts|js.map|metadata.json|css)"
   ],
   "dependencies": {
-    "@ng-bootstrap/ng-bootstrap": "1.1.x",
+    "@ng-bootstrap/ng-bootstrap": "4.2.x",
     "bootstrap": ">=4.3.1 <4.4.0",
     "moment": ">=2.19.3"
   },
   "devDependencies": {
-    "@angular/animations": ">=5.0.0 <7.0.0",
-    "@angular/common": ">=5.0.0 <7.0.0",
-    "@angular/compiler": ">=5.0.0 <7.0.0",
-    "@angular/compiler-cli": ">=5.0.0 <7.0.0",
-    "@angular/core": ">=5.0.0 <7.0.0",
-    "@angular/forms": ">=5.0.0 <7.0.0",
-    "@angular/platform-browser": ">=5.0.0 <7.0.0",
-    "@angular/platform-browser-dynamic": ">=5.0.0 <7.0.0",
-    "@angular/router": ">=5.0.0 <7.0.0",
+    "@angular/animations": ">=8.0.0 <10.0.0",
+    "@angular/common": ">=8.0.0 <10.0.0",
+    "@angular/compiler": ">=8.0.0 <10.0.0",
+    "@angular/compiler-cli": ">=8.0.0 <10.0.0",
+    "@angular/core": ">=8.0.0 <10.0.0",
+    "@angular/forms": ">=8.0.0 <10.0.0",
+    "@angular/platform-browser": ">=8.0.0 <10.0.0",
+    "@angular/platform-browser-dynamic": ">=8.0.0 <10.0.0",
+    "@angular/router": ">=8.0.0 <10.0.0",
     "@compodoc/compodoc": "1.0.x",
     "@types/jasmine": "^2.5.53",
     "@types/node": "^8.0.0",
@@ -99,18 +99,18 @@
     "node-color-log": "2.1.x",
     "reflect-metadata": "^0.1.3",
     "rimraf": "^2.6.1",
-    "rxjs": "5.5.x",
+    "rxjs": "6.4.x",
     "semver": "5.6.x",
     "source-map-loader": "^0.2.1",
     "tar": ">=4.4.2",
     "to-string-loader": "^1.1.5",
     "tslint": "^4.5.1",
-    "typescript": "2.5.x",
+    "typescript": "~3.4.2",
     "url-parse": ">=1.4.3",
     "webpack": "3.11.x",
     "webpack-dev-middleware": "1.12.x",
     "webpack-dev-server": "2.7.x",
     "webpack-merge": "4.1.x",
-    "zone.js": "^0.8.12"
+    "zone.js": "^0.9.1"
   }
 }
