--- a/demo/package.json
+++ b/demo/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "npm run build:server",
     "build:live": "npm run clean && npm run ngc && npm run webpack -- --config webpack/webpack.live.js",
-    "build:server": "npm run clean && npm run ngc && npm run webpack -- --config webpack/webpack.server.js",
+    "build:server": "npm run clean && npm run ngc && npm run webpack -- --env.production --config webpack/webpack.server.js",
     "clean": "npm run rimraf src/**/*.js src/**/*.js.map src/**/*.ngstyle.ts src/**/*.ngfactory.ts src/**/*.ngsummary.json src/**/*.metadata.json src/**/*.d.ts build dist",
     "ngc": "ngc",
     "rimraf": "rimraf",
@@ -46,21 +46,21 @@
     "@types/selenium-webdriver": "~2.53.39",
     "@types/source-map": "^0.5.0",
     "@types/webpack": "4.1.2",
-    "angular-router-loader": "^0.6.0",
+    "angular-router-loader": "^0.8.5",
     "angular2-template-loader": "^0.6.2",
     "autoprefixer": "^7.1.2",
-    "awesome-typescript-loader": "3.1.2",
-    "base-href-webpack-plugin": "^1.0.2",
+    "awesome-typescript-loader": "^5.0.0",
+    "base-href-webpack-plugin": "^2.0.0",
     "copy-webpack-plugin": "^4.0.1",
     "core-js": "^2.4.1",
     "css-loader": "^0.26.0",
     "express": "^4.15.3",
     "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.10.0",
+    "file-loader": "^3.0.0",
     "fs": "^0.0.2",
     "gulp": "^3.9.1",
-    "html-loader": "^0.4.5",
-    "html-webpack-plugin": "^2.28.0",
+    "html-loader": "^0.5.0",
+    "html-webpack-plugin": "3.2.x",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "minimist": "^1.2.0",
@@ -68,21 +68,22 @@
     "raw-loader": "^0.5.1",
     "resolve-url-loader": "2.0.2",
     "rimraf": "^2.6.1",
-    "sass-loader": "6.0.3",
+    "sass-loader": "^7.0.0",
     "semver": "5.6.x",
-    "style-loader": "^0.16.0",
+    "style-loader": "^0.23.0",
     "ts-helpers": "^1.1.2",
     "ts-loader": "^2.0.3",
     "tsconfig-lint": "^0.11.0",
-    "tslint": "^4.1.1",
-    "tslint-loader": "^2.1.5",
+    "tslint": "^5.0.0",
+    "tslint-loader": "^3.5.0",
     "typescript": "~3.4.2",
     "uglify-es": "^3.0.25",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "url-loader": "^0.5.8",
-    "webpack": "3.11.x",
-    "webpack-dev-middleware": "1.12.x",
-    "webpack-dev-server": "2.7.x",
-    "webpack-merge": "4.1.x"
+    "webpack": "^4.32.0",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.4.1",
+    "webpack-merge": "^4.2.0",
+    "webpack-stream": "^5.2.0"
   }
 }
