--- a/demo/package.json
+++ b/demo/package.json
@@ -30,10 +30,11 @@
     "@fortawesome/fontawesome-free-solid": "5.0.x",
     "@ng-bootstrap/ng-bootstrap": "4.2.x",
     "bootstrap": ">=4.3.1 < 4.4.0",
+    "flatted": "2.0.x",
     "hci-ng-grid-dto": "1.0.0-beta.4",
     "moment": ">=2.19.3",
     "moment-random": "1.0.x",
-    "prismjs": "1.15.x",
+    "prismjs": "1.16.x",
     "reflect-metadata": "^0.1.10",
     "rxjs": "6.4.x",
     "zone.js": "^0.9.1"
@@ -63,6 +64,8 @@
     "html-webpack-plugin": "3.2.x",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
+    "lodash-decorators": "^4.5.0",
+    "lodash-es": "^4.17.4",
     "minimist": "^1.2.0",
     "postcss-loader": "1.3.3",
     "raw-loader": "^0.5.1",
