--- a/demo/package.json
+++ b/demo/package.json
@@ -18,18 +18,18 @@
     "hci-ng-grid": "5.0.x"
   },
   "dependencies": {
+    "@angular/cdk": ">=8.0.0 <10.0.0",
     "@angular/common": ">=8.0.0 <10.0.0",
     "@angular/compiler": ">=8.0.0 <10.0.0",
     "@angular/compiler-cli": ">=8.0.0 <10.0.0",
     "@angular/core": ">=8.0.0 <10.0.0",
     "@angular/forms": ">=8.0.0 <10.0.0",
+    "@angular/material": ">=8.0.0 <10.0.0",
     "@angular/platform-browser": ">=8.0.0 <10.0.0",
     "@angular/router": ">=8.0.0 <10.0.0",
     "@fortawesome/fontawesome": "1.1.x",
     "@fortawesome/fontawesome-free-regular": "5.0.x",
     "@fortawesome/fontawesome-free-solid": "5.0.x",
-    "@ng-bootstrap/ng-bootstrap": "5.0.x",
-    "bootstrap": ">=4.3.1 < 4.4.0",
     "flatted": "2.0.x",
     "hci-ng-grid-dto": "1.0.x",
     "moment": ">=2.19.3",
