--- a/package.json
+++ b/package.json
@@ -40,18 +40,18 @@
     "src/**/!(*spec).+(js|d.ts|js.map|metadata.json|css)"
   ],
   "dependencies": {
-    "@ng-bootstrap/ng-bootstrap": "5.0.x",
-    "bootstrap": ">=4.3.1 <4.4.0",
     "hci-ng-grid-dto": "1.0.x",
     "moment": ">=2.19.3"
   },
   "devDependencies": {
     "@angular/animations": ">=8.0.0 <10.0.0",
+    "@angular/cdk": ">=8.0.0 <10.0.0",
     "@angular/common": ">=8.0.0 <10.0.0",
     "@angular/compiler": ">=8.0.0 <10.0.0",
     "@angular/compiler-cli": ">=8.0.0 <10.0.0",
     "@angular/core": ">=8.0.0 <10.0.0",
     "@angular/forms": ">=8.0.0 <10.0.0",
+    "@angular/material": ">=8.0.0 <10.0.0",
     "@angular/platform-browser": ">=8.0.0 <10.0.0",
     "@angular/platform-browser-dynamic": ">=8.0.0 <10.0.0",
     "@angular/router": ">=8.0.0 <10.0.0",
