--- a/demo/package.json
+++ b/demo/package.json
@@ -30,6 +30,7 @@
     "@fortawesome/fontawesome": "1.1.x",
     "@fortawesome/fontawesome-free-regular": "5.0.x",
     "@fortawesome/fontawesome-free-solid": "5.0.x",
+    "bootstrap": ">=4.3.0 <4.4.0",
     "flatted": "2.0.x",
     "hci-ng-grid-dto": "1.0.x",
     "moment": ">=2.19.3",
