--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hci-ng-grid",
-  "version": "5.0.4",
+  "version": "5.0.5",
   "description": "Comprehensive angular grid component",
   "keywords": [
     "angular",
@@ -14,7 +14,7 @@
   "repository": "git+https://github.com/HuntsmanCancerInstitute-RISR/hci-ng-grid.git",
   "homepage": "https://huntsmancancerinstitute-risr.github.io/hci-ng-grid-demo",
   "scripts": {
-    "build": "npm run clean && npm run ngc && npm run doc && npm run karma start && npm run copyfiles package.json dist/ && npm run copyfiles -- src/grid/themes/*.css dist/ && npm run push",
+    "build": "npm run clean && npm run ngc && npm run doc &&  npm run copyfiles package.json dist/ && npm run copyfiles -- src/grid/themes/*.css dist/ && npm run push",
     "build-demo": "gulp build-demo",
     "clean": "npm run rimraf index.js index.d.ts index.ngsummary.json index.metadata.json index.js.map src/**/*.js src/**/*.ngfactory.ts src/**/*.d.ts src/**/*.js.map src/**/*.ngsummary.json src/**/*.metadata.json code-coverage dist",
     "compodoc": "compodoc",
